--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,14 @@
 @charset "utf-8";
 
 
+body {
+  font-family: "Lato";
+}
+.clearfix::after {
+  display: block;
+  clear: both;
+  content: "";
+}
 .inner {
   width: 1100px;
   margin: 0 auto;
@@ -26,13 +34,13 @@
   text-decoration: none;
   background-color: #74cfae;
 }
-.contact__text:hover {
-  transition: 0.3s;
+.contact:hover .contact__text {
   color: #333;
 }
 .contact__text {
   font-size: 12px;
   color: #ffffff;
+  transition: 0.3s;
 }
 .title {
   margin-top: 70px;
@@ -45,11 +53,13 @@
 .title__main {
   font-size: 90px;
   font-weight: 700;
+  font-family: ;
   color: #74cfae;
 }
 .title__sub {
   margin-top: 20px;
   font-size: 30px;
+  font-family: "Raleway";
   color: #c0c0c0;
 }
 .what {
@@ -67,7 +77,7 @@
 }
 .what__title {
   font-size: 24px;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Raleway";
 }
 .what__text {
   width: 565px;
@@ -81,39 +91,42 @@
 }
 .our-inner {
   font-size: 0;
+  padding: 60px 0 70px;
 }
 .our__title {
   text-align: center;
-  padding: 60px 0 40px;
   font-size: 24px;
+  font-family: "Raleway";
   color: gray;
 }
-.our__content {
+.our__contents li {
   display: inline-block;
   margin-left: 100px;
   opacity: 0.7;
-}
-.our__content:hover {
   transition: 0.3s;
+}
+.our__contents li:hover {
   opacity: 1;
 }
-.our__content:nth-child(3n+1) {
+.our__contents li:nth-child(-n+3) {
+  margin-top: 40px;
+}
+.our__contents li:nth-child(3n+1) {
   margin-left: 0;
 }
-.our__content:nth-child(4n):nth-child(-n+6) {
+.our__contents li:nth-child(n+4):nth-child(-n+6) {
   margin-top: 80px;
 }
 .our__message {
   font-size: 1rem;
   margin-top: 90px;
-  padding-bottom: 70px;
   text-align: center;
 }
 .our__text {
-  width: 540px;
+  width: 460px;
   display: inline-block;
   vertical-align: middle;
-  color: #c0c0c0;
+  color: gray;
 }
 .our__email {
   margin-left: 90px;
@@ -124,10 +137,10 @@
 }
 .our__email__text {
   color: #ffffff;
-}
-.our__email__text:hover {
-  color: #333;
   transition: 0.3s;
+}
+.our__email:hover .our__email__text {
+  color: #333;
 }
 .skill {
   background-color: #4e4e4e;
@@ -138,10 +151,11 @@
 .skill__title {
   text-align: center;
   color: #ffffff;
-  font-size: large;
+  font-family: "Raleway";
+  font-size: 25px;
 }
 .skill__contents {
-  margin-top: 20px;
+  margin-top: 50px;
   display: flex;
   justify-content: center;
 }
@@ -168,7 +182,8 @@
   justify-content: center;
 }
 .nav__icon {
-  padding: 20px 0;
+  padding: 40px 0;
+  transition: 0.3s;
 }
 .nav__icon:hover {
   background-color: #ffffff;
