--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,13 @@ body {
 }
 .fa-bolt {
   font-size: 40px;
-  color: gray;
+  color: #4e4e4e;
 }
 .contact {
   padding: 14px 12px;
   text-decoration: none;
   background-color: #74cfae;
+  display: inline-block;
 }
 .contact:hover .contact__text {
   color: #333;
@@ -72,6 +73,7 @@ body {
   font-size: 0;
 }
 .what__title__text {
+  margin-top: 40px;
   text-align: center;
   color: #ffffff;
 }
@@ -80,11 +82,11 @@ body {
   font-family: "Raleway";
 }
 .what__text {
-  width: 565px;
+  width: 650px;
   margin: 0 auto;
   font-size: 20px;
   margin-top: 35px;
-  word-break: break-all;
+  line-height: 150%;
 }
 .our {
   background-color: #f2f2f2;
@@ -97,7 +99,13 @@ body {
   text-align: center;
   font-size: 24px;
   font-family: "Raleway";
-  color: gray;
+  color: #4e4e4e;
+}
+.our-inner ul {
+  margin-top: 40px;
+}
+.our__content {
+  display: inline-block;
 }
 .our__contents li {
   display: inline-block;
@@ -107,9 +115,6 @@ body {
 }
 .our__contents li:hover {
   opacity: 1;
-}
-.our__contents li:nth-child(-n+3) {
-  margin-top: 40px;
 }
 .our__contents li:nth-child(3n+1) {
   margin-left: 0;
@@ -126,7 +131,7 @@ body {
   width: 460px;
   display: inline-block;
   vertical-align: middle;
-  color: gray;
+  color: #4e4e4e;
 }
 .our__email {
   margin-left: 90px;
@@ -166,7 +171,7 @@ body {
   margin-left: 0;
 }
 .skill__name {
-  margin-top: 10px;
+  margin-top: 25px;
   color: #ffffff;
   text-align: center;
   font-size: 16px;
@@ -182,7 +187,8 @@ body {
   justify-content: center;
 }
 .nav__icon {
-  padding: 40px 0;
+  padding: 35px 0;
+  display: inline-block;
   transition: 0.3s;
 }
 .nav__icon:hover {
