--- a/css/style.css
+++ b/css/style.css
@@ -133,7 +133,6 @@ a {
 }
 
 .what__text {
-  width: 650px;
   margin: 0 auto;
   font-size: 20px;
   margin-top: 35px;
@@ -168,7 +167,6 @@ a {
 }
 
 .our__text {
-  width: 460px;
   vertical-align: middle;
 }
 
@@ -201,6 +199,10 @@ a {
   font-size: 16px;
 }
 
+.nav-inner {
+  padding: 200px 0;
+}
+
 .nav__icons {
   justify-content: center;
 }
@@ -228,11 +230,7 @@ a {
 }
 
 @media screen and (max-width: 767px) { 
-  .inner {
-    width: 97%;
-  }
-
-  .br-sp {
+  .br-sp span {
     display: inline;
   }
 
@@ -282,53 +280,15 @@ a {
     font-size: 80px;
   }
 
-  .what-inner {
-    padding: 50px 0 25px;
-    flex-direction: column;
-  }
-
-  .what__iphone {
-    margin: 0 auto;
-  }
-
-  .what__title__text {
-    margin-top: 20px;
-  }
-
-  .our__contents {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-
-.our__contents li:nth-child(4) {
-  margin-top: 80px;
-}
-
-  .our__message {
+  .our__contents li:nth-child(4) {
     margin-top: 80px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
   }
 
   .our__email {
     margin-top: 40px;
   }
 
-  .skill__contents {
-    flex-direction: column;
-    align-items: center;
-  }
-
-  .skill__contents li {
-    margin-top: 88px;
-  }
   
-  .skill__contents li:first-child {
-    margin-top: 0;
-  }
-
   .skill__contents li p {
     margin-top: 25px;
     font-size: 16px;
@@ -337,26 +297,22 @@ a {
   .nav-inner {
     padding: 50px 0;
   }
-
+  
   .nav__icons {
     flex-direction: column;
   }
-
+  
   .nav__icons li a {
     text-align: center;
     width: 100%;
   }
 }
 
-@media screen and (min-width:768px) and ( max-width:1199px) {
+@media screen and (max-width:1199px) {
   .inner {
     width: 97%;
   }
-
-  .br-sp {
-    display: none;
-  }
-
+  
   .title__main {
     font-size: 90px;
     font-weight: 700;
@@ -367,16 +323,16 @@ a {
     font-size: 30px;
   }
   
-
+  
   .what-inner {
     padding: 50px 0 25px;
     flex-direction: column;
   }
-
+  
   .what__iphone {
     margin: 0 auto;
   }
-
+  
   .what__title__text {
     margin-top: 20px;
   }
@@ -386,11 +342,11 @@ a {
     flex-direction: column;
     align-items: center;
   }
-
-.our__contents li:nth-child(4) {
-  margin-top: 80px;
-}
-
+  
+  .our__contents li:nth-child(4) {
+    margin-top: 80px;
+  }
+  
   .our__message {
     margin-top: 80px;
     display: flex;
@@ -429,33 +385,9 @@ a {
     font-size: 16px;
   }
 
-  .nav-inner {
-    padding: 200px 0;
-  }
 }
 
 @media screen and (min-width:1200px) {
-  .br-sp {
-    display: none;
-  }
-  
-  .header {
-    width: 100%;
-    position: fixed;
-    top: 0px;
-    z-index: 10;
-  }
-  
-  .header-inner {
-    padding: 15px 0;
-    justify-content: space-between;
-  }
-  
-  .contact__text {
-    font-size: 12px;
-    transition: 0.3s;
-  }
-  
   .title__main {
     font-size: 90px;
     font-weight: 700;
@@ -465,7 +397,11 @@ a {
     margin-top: 20px;
     font-size: 30px;
   }
-  
+
+.what__text {
+  width: 650px;
+}
+
   .our__contents li {
     margin: 80px 0 0 100px;
   }
@@ -492,6 +428,10 @@ a {
     transition: 0.3s;
   }
   
+  .our__text {
+    width: 460px;
+  }
+
   .our__email:hover .our__email__text {
     color: #333;
   }
